--- a/index.html
+++ b/index.html
@@ -1,10 +1,173 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Search Page Clone</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      justify-content: space-between;
+      background-color: #ffffff;
+    }
+
+    /* Top right links */
+    .top-bar {
+      display: flex;
+      justify-content: flex-end;
+      padding: 15px 20px;
+      gap: 15px;
+      font-size: 14px;
+    }
+
+    .top-bar a {
+      text-decoration: none;
+      color: #555;
+    }
+
+    .top-bar a:hover {
+      text-decoration: underline;
+    }
+
+    /* Center content */
+    .center {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: -80px;
+    }
+
+    .logo {
+      font-size: 64px;
+      font-weight: bold;
+      letter-spacing: -2px;
+      margin-bottom: 25px;
+    }
+
+    .logo span:nth-child(1){color:#4285F4}
+    .logo span:nth-child(2){color:#EA4335}
+    .logo span:nth-child(3){color:#FBBC05}
+    .logo span:nth-child(4){color:#4285F4}
+    .logo span:nth-child(5){color:#34A853}
+    .logo span:nth-child(6){color:#EA4335}
+
+    .search-box {
+      width: 90%;
+      max-width: 580px;
+      padding: 14px 20px;
+      border-radius: 30px;
+      border: 1px solid #dcdcdc;
+      font-size: 16px;
+      outline: none;
+      box-shadow: 0 1px 6px rgba(32,33,36,.1);
+    }
+
+    .search-box:hover {
+      box-shadow: 0 1px 6px rgba(32,33,36,.2);
+    }
+
+    .buttons {
+      margin-top: 25px;
+      display: flex;
+      gap: 12px;
+    }
+
+    .buttons button {
+      padding: 10px 18px;
+      border: 1px solid #f2f2f2;
+      background-color: #f8f9fa;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    .buttons button:hover {
+      border: 1px solid #dadce0;
+      box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    }
+
+    /* Footer */
+    .footer {
+      background: #f2f2f2;
+      padding: 15px 30px;
+      font-size: 14px;
+      color: #70757a;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    .footer div {
+      display: flex;
+      gap: 20px;
+    }
+
+    .footer a {
+      text-decoration: none;
+      color: #70757a;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello world 👋</h1>
-  <p>I made this website for free.</p>
+
+  <div class="top-bar">
+    <a href="#">Gmail</a>
+    <a href="#">Images</a>
+  </div>
+
+  <div class="center">
+    <div class="logo">
+      <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span><span>h</span>
+    </div>
+
+    <input class="search-box" type="text" placeholder="Search the web...">
+
+    <div class="buttons">
+      <button onclick="doSearch()">Search</button>
+      <button onclick="feelingLucky()">I'm Feeling Lucky</button>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div>
+      <a href="#">About</a>
+      <a href="#">Advertising</a>
+      <a href="#">Business</a>
+    </div>
+
+    <div>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <a href="#">Settings</a>
+    </div>
+  </div>
+
+  <script>
+    function doSearch() {
+      const query = document.querySelector('.search-box').value;
+      if(query.trim() !== ''){
+        window.location.href = `https://www.bing.com/search?q=${encodeURIComponent(query)}`;
+      }
+    }
+
+    function feelingLucky() {
+      window.location.href = "https://www.wikipedia.org";
+    }
+
+    document.querySelector('.search-box').addEventListener("keypress", function(e) {
+      if (e.key === "Enter") {
+        doSearch();
+      }
+    });
+  </script>
+
 </body>
 </html>
