--- a/index.html
+++ b/index.html
@@ -3,103 +3,106 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Google</title>
+  <title>Sign in - MOT Testing Service</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    body { font-family: Arial, Helvetica, sans-serif; }
+    .gov-link:hover { text-decoration: underline; }
+  </style>
 </head>
-<body class="bg-white text-sm text-gray-700 h-screen flex flex-col">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
-  <!-- Top Navigation -->
-  <header class="flex justify-end items-center px-6 py-3 space-x-4">
-    <a href="#" class="hover:underline">Gmail</a>
-    <a href="#" class="hover:underline">Images</a>
-
-    <!-- Apps Icon -->
-    <button class="p-2 rounded-full hover:bg-gray-100">
-      <svg class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor">
-        <circle cx="5" cy="5" r="2"></circle>
-        <circle cx="12" cy="5" r="2"></circle>
-        <circle cx="19" cy="5" r="2"></circle>
-        <circle cx="5" cy="12" r="2"></circle>
-        <circle cx="12" cy="12" r="2"></circle>
-        <circle cx="19" cy="12" r="2"></circle>
-        <circle cx="5" cy="19" r="2"></circle>
-        <circle cx="12" cy="19" r="2"></circle>
-        <circle cx="19" cy="19" r="2"></circle>
-      </svg>
-    </button>
-
-    <!-- Profile Placeholder -->
-    <div class="w-8 h-8 bg-blue-500 rounded-full"></div>
+  <!-- GOV.UK Header -->
+  <header class="bg-black">
+    <div class="max-w-5xl mx-auto px-6 py-3 flex items-center">
+      <span class="text-white font-bold text-lg tracking-wide">GOV.UK</span>
+    </div>
   </header>
 
+  <!-- Service Name Bar -->
+  <div class="bg-white border-b">
+    <div class="max-w-5xl mx-auto px-6 py-4">
+      <h2 class="text-xl font-bold">MOT testing service</h2>
+    </div>
+  </div>
+
   <!-- Main Content -->
-  <main class="flex flex-1 flex-col items-center justify-center -mt-20">
+  <main class="flex-grow">
+    <div class="max-w-5xl mx-auto px-6 py-10">
+      <div class="max-w-md">
 
-    <!-- Google Logo -->
-    <h1 class="text-7xl font-semibold tracking-tight mb-8 select-none">
-      <span class="text-blue-500">G</span>
-      <span class="text-red-500">o</span>
-      <span class="text-yellow-500">o</span>
-      <span class="text-blue-500">g</span>
-      <span class="text-green-500">l</span>
-      <span class="text-red-500">e</span>
-    </h1>
+        <!-- Error Summary (hidden by default) -->
+        <div class="hidden border-l-4 border-red-600 bg-red-50 p-4 mb-6">
+          <h2 class="font-bold text-red-700 mb-2">There is a problem</h2>
+          <ul class="list-disc list-inside text-red-700 text-sm">
+            <li>Enter your user ID</li>
+            <li>Enter your password</li>
+          </ul>
+        </div>
 
-    <!-- Search Box -->
-    <div class="w-full max-w-2xl px-6">
-      <div class="flex items-center border border-gray-300 rounded-full px-4 py-2 shadow-sm hover:shadow-md focus-within:shadow-md transition">
-        
-        <!-- Search Icon -->
-        <svg class="w-5 h-5 text-gray-400 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35m1.1-5.4a7 7 0 11-14 0 7 7 0 0114 0z" />
-        </svg>
+        <h1 class="text-3xl font-bold mb-6">Sign in</h1>
 
-        <input
-          type="text"
-          class="flex-grow outline-none text-base"
-        />
+        <form class="space-y-6" novalidate>
 
-        <!-- Mic Icon -->
-        <svg class="w-5 h-5 text-blue-500 ml-3" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12 14a3 3 0 003-3V5a3 3 0 10-6 0v6a3 3 0 003 3z"></path>
-          <path d="M19 11a7 7 0 01-14 0H3a9 9 0 0018 0h-2z"></path>
-        </svg>
+          <!-- User ID -->
+          <div>
+            <label for="userId" class="block font-bold mb-1">User ID</label>
+            <span class="block text-sm text-gray-600 mb-1">This is the ID you were given when you registered</span>
+            <input
+              id="userId"
+              name="userId"
+              type="text"
+              class="w-full border border-gray-500 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600"
+            />
+          </div>
+
+          <!-- Password -->
+          <div>
+            <label for="password" class="block font-bold mb-1">Password</label>
+            <input
+              id="password"
+              name="password"
+              type="password"
+              class="w-full border border-gray-500 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-600"
+            />
+          </div>
+
+          <!-- Remember me -->
+          <div class="flex items-center">
+            <input id="remember" type="checkbox" class="h-5 w-5 border-gray-400" />
+            <label for="remember" class="ml-2">Remember me</label>
+          </div>
+
+          <!-- Submit -->
+          <button
+            type="submit"
+            class="bg-green-600 text-white font-bold px-4 py-2 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-600"
+          >
+            Sign in
+          </button>
+
+        </form>
+
+        <!-- Support links -->
+        <div class="mt-8 space-y-2 text-sm">
+          <p><a href="#" class="gov-link text-blue-700">Forgotten your password?</a></p>
+          <p><a href="#" class="gov-link text-blue-700">Get help signing in</a></p>
+        </div>
+
       </div>
-
-      <!-- Buttons -->
-      <div class="flex justify-center space-x-4 mt-6">
-        <button class="bg-gray-100 hover:border-gray-300 border border-transparent px-5 py-2 rounded text-gray-800">
-          Google Search
-        </button>
-        <button class="bg-gray-100 hover:border-gray-300 border border-transparent px-5 py-2 rounded text-gray-800">
-          I'm Feeling Lucky
-        </button>
-      </div>
-
-      <!-- Language -->
-      <p class="text-center text-sm mt-6">
-        Google offered in:
-        <a href="#" class="text-blue-600 hover:underline">Español</a>
-      </p>
     </div>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-100 text-gray-600 text-sm">
-    <div class="px-8 py-3 border-b">United States</div>
-
-    <div class="flex flex-col md:flex-row justify-between px-8 py-3 space-y-2 md:space-y-0">
-      <div class="flex space-x-6">
-        <a href="#" class="hover:underline">Advertising</a>
-        <a href="#" class="hover:underline">Business</a>
-        <a href="#" class="hover:underline">How Search works</a>
+  <footer class="bg-gray-100 border-t">
+    <div class="max-w-5xl mx-auto px-6 py-6 text-sm text-gray-700 space-y-3">
+      <div class="flex flex-wrap gap-4">
+        <a href="#" class="gov-link text-blue-700">Cookies</a>
+        <a href="#" class="gov-link text-blue-700">Privacy</a>
+        <a href="#" class="gov-link text-blue-700">Terms and conditions</a>
+        <a href="#" class="gov-link text-blue-700">Accessibility statement</a>
       </div>
-
-      <div class="flex space-x-6">
-        <a href="#" class="hover:underline">Privacy</a>
-        <a href="#" class="hover:underline">Terms</a>
-        <a href="#" class="hover:underline">Settings</a>
-      </div>
+      <p>© Crown copyright</p>
     </div>
   </footer>
 
